docs: generated api docs and added README.md file

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "mkamel/searchable": "^0.2.0",
+        "rakutentech/laravel-request-docs": "^2.43",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
